Fixed alignment issue in course map

--- a/app/styles/app-rwd/controllers/teacher/class/_course-map.scss
+++ b/app/styles/app-rwd/controllers/teacher/class/_course-map.scss
@@ -342,7 +342,7 @@
 
                                 .panel-heading {
                                   .panel-title {
-                                    width: calc(100% - 216px) !important;
+                                    width: calc(100% - 150px) !important;
                                     padding: 0;
                                     margin-left: 0;
                                     display: flex;
