--- a/app/styles/components/class/overview/_gru-accordion-lesson.scss
+++ b/app/styles/components/class/overview/_gru-accordion-lesson.scss
@@ -78,12 +78,14 @@
     .info {
       float: $menu-float-dir;
       height: inherit;
+      display: flex;
 
       .content-count {
         font-size: $font-navigator;
         margin: 10px 10px 0 0;
         color: $light-400;
-        display: inline-block;
+        display: flex;
+        align-items: center;
 
         span {
           vertical-align: middle;
@@ -150,12 +152,14 @@
           }
         }
       }
+
       .performance-container {
         cursor: pointer;
         width: 76px;
         display: inline-block;
         height: 67px;
         vertical-align: middle;
+
         &.not-started {
           pointer-events: none;
         }
@@ -163,6 +167,7 @@
         .container-box {
           height: 67px;
           border-bottom: 1px solid $white;
+
           .percentage {
             cursor: pointer;
           }
@@ -317,8 +322,9 @@
 
         .controls {
           padding: 15px 0;
-          margin: 0 5px 0 5px;
-          display: inline-block;
+          margin: 0 5px;
+          display: flex;
+          align-items: center;
 
           .switch {
             width: 40px;
@@ -416,6 +422,10 @@
             vertical-align: middle;
             margin: 0;
             padding: 5px 0 0 5px;
+            max-width: 65%;
+            @media only screen and (min-width: $screen-md) and (max-width: $screen-in-1024) {
+              max-width: 55%;
+            }
 
             .type {
               color: $light-500;
@@ -440,7 +450,6 @@
               display: inline-flex;
               color: $orange-400;
             }
-            max-width: 65%;
           }
 
           .typeCollection {
@@ -472,6 +481,8 @@
         }
 
         .info {
+          display: flex;
+          flex-direction: row-reverse;
           float: $menu-float-dir;
           height: inherit;
           max-width: 38% !important;
@@ -492,9 +503,10 @@
 
           .content-count {
             font-size: $font-navigator;
-            margin: 0px 10px 0 0;
+            margin: 0 10px 0 0;
             color: $light-400;
-            display: inline-block;
+            display: flex;
+            align-items: center;
 
             span {
               vertical-align: middle;
@@ -578,6 +590,7 @@
             &.not-started {
               pointer-events: none;
             }
+
             span {
               vertical-align: middle;
             }
@@ -612,10 +625,12 @@
             &.chart {
               float: $menu-float-dir;
               padding: 0;
+
               .time-spent {
                 line-height: 67px;
               }
             }
+
             &.non-clickable {
               pointer-events: none;
             }
